--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/barbarian.webp" />
+    <link rel="icon" type="image/svg+xml" href="./barbarian.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pixels test</title>
+    <script type="module" crossorigin src="./assets/index.9306f81b.js"></script>
+    <link rel="stylesheet" href="./assets/index.1513fb52.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    
   </body>
 </html>
